Bug 345973 - Notifications sometimes stay visible for the duration of the session
Summary: Notifications sometimes stay visible for the duration of the session
Status: RESOLVED FIXED
Alias: None
Product: plasmashell
Classification: Plasma
Component: Notifications (other bugs)
Version First Reported In: 5.2.2
Platform: Other Linux
: NOR normal
Target Milestone: 1.0
Assignee: Martin Klapetek
URL:
Keywords:
: 347744 350649 (view as bug list)
Depends on:
Blocks:
 
Reported: 2015-04-08 09:19 UTC by Bas van Schaik
Modified: 2015-07-27 10:05 UTC (History)
6 users (show)

See Also:
Latest Commit:
Version Fixed/Implemented In:
Sentry Crash Report:


Attachments
Normal notification (197.60 KB, image/jpeg)
2015-04-09 15:08 UTC, Bas van Schaik
Details

Note You need to log in before you can comment on or make changes to this bug.
Description Bas van Schaik 2015-04-08 09:19:47 UTC
About once every couple of days, a notification will not disappear after appearing. I've seen this happen with network manager notifications (e.g. connecting/disconnecting from WiFi), but also KWin notifications (I'm now looking at a persistent "Desktop effects were restarted (...)").

These hanging notifications stop the notification queue from being processed: other notifications that are supposed to appear don't. However, it appears that the hanging notification gets cleared if the application that was responsible for it gets closed. Then, the notification queue suddenly gets processed, and old notifications appear. So far, I've not been able to clear a network manager-related notification, though.

Note that the notifications, even when hanging, remain responsive: hovering the mouse over it will blur it.

Reproducible: Sometimes

Steps to Reproduce:
1. Open an application / process that shows a notification


Actual Results:  
The notification will sometimes stay visible for the duration of the session.

Expected Results:  
The notification should disappear after a few seconds.
Comment 1 Martin Klapetek 2015-04-08 10:22:03 UTC
Looking into this.
Comment 2 Martin Klapetek 2015-04-08 20:18:27 UTC
Are you able to apply and try patches btw?
Comment 3 Bas van Schaik 2015-04-08 20:31:09 UTC
Not easily, I'm afraid. I'm on the Ubuntu Vivid packages (or PPA, when Vivid's outdated). Sorry!
Comment 4 Bhushan Shah 2015-04-09 14:59:05 UTC
Can you give screenshot of notifications that stay visible during session?
Comment 5 Bas van Schaik 2015-04-09 15:07:17 UTC
Sure - I'll do that next time I encounter this problem. They look very ordinary to me, but they just won't disappear. I've attached a normal notification that disappeared after a few seconds.
Comment 6 Bas van Schaik 2015-04-09 15:08:03 UTC
Created attachment 91965 [details]
Normal notification

Notification that appeared and disappeared after a few seconds (as expected). The 'hanging' notifications look identical, but simply won't disappear.
Comment 7 Martin Klapetek 2015-04-09 15:12:49 UTC
These are not Plasma's notifications, I suspect you have some 3rd party notification service running. 

Nevertheless, if they are not marked as persistent, they should not get stucked.
Comment 8 Bas van Schaik 2015-04-09 15:27:22 UTC
All of my notifications appeared in that way, but it seems to have been /usr/lib/x86_64-linux-gnu/notify-osd (part of the Ubuntu notify-osd package that was previously installed by default).

I don't think I'm getting any notifications any longer (none at all), but at least they're not stuck anymore. Thanks - and apologies for wasting your time.
Comment 9 Bhushan Shah 2015-04-09 15:28:29 UTC
Please add/enable notifications applet in your system tray.
Comment 10 Martin Klapetek 2015-04-09 15:29:24 UTC
No worries, there is an actual bug in our notifications when they sometimes also get stuck, which I've investigated and found.

Furthermore, our notification system should work with any frontend supporting the notification specification, which I believe the ubuntu notify-osd does. So I'd like to check the notify-osd and see if we have any bugs on our side.
Comment 11 Martin Klapetek 2015-04-16 15:36:16 UTC
Git commit bb5ea36c33052fcfaa8e7fe72515ebf2144f563c by Martin Klapetek.
Committed on 16/04/2015 at 15:36.
Pushed by mklapetek into branch 'Plasma/5.3'.

[notifications] Make sure the timer is restarted after the popup moves

There's a bug with MouseArea which causes the containsMouse to not be
updated when the Item moves away from below the mouse while the mouse is
not being moved. This should help at least with those cases where the
notification gets stuck.

Reviewed-by: Kai Uwe Broulik

M  +4    -0    applets/notifications/package/contents/ui/NotificationPopup.qml

http://commits.kde.org/plasma-workspace/bb5ea36c33052fcfaa8e7fe72515ebf2144f563c
Comment 12 Martin Klapetek 2015-04-17 19:20:23 UTC
I can confirm that notify-osd /does/ hang with network manager notifications.

I'll see if that's anything we do wrong.
Comment 13 Martin Klapetek 2015-04-28 09:48:13 UTC
Git commit 6d8f6ff59ea322313ad6c546c72339d5426152b9 by Martin Klapetek.
Committed on 28/04/2015 at 09:48.
Pushed by mklapetek into branch 'master'.

Don't trigger notification updates when setting the same properties

M  +16   -0    src/knotification.cpp

http://commits.kde.org/knotifications/6d8f6ff59ea322313ad6c546c72339d5426152b9
Comment 14 Martin Klapetek 2015-04-28 09:48:13 UTC
Git commit 2a8002d00713a7768eae3fde215efeadfe1aaa8d by Martin Klapetek.
Committed on 28/04/2015 at 09:48.
Pushed by mklapetek into branch 'master'.

Don't modify the KNotification object from NotifyByPopup plugin

The KNotification object itself should never be modified from the
plugins; the plugins should do only local checking of the properties.
Modifying the KNotification object itself can break other plugins.

This together with the previous commit also fix KNotification usage
together with Ubuntu's NotifyOSD which could make it look like stuck
while it was actually in an update loop (the server does not support
actions so it was unset on KNotification which triggered an update which
would reshow the popup which would unset the actions on KNotification
which would trigger an update and so on).

CHANGELOG: Fix KNotifications when used with Ubuntu's NotifyOSD
REVIEW: 123540

M  +30   -35   src/notifybypopup.cpp

http://commits.kde.org/knotifications/2a8002d00713a7768eae3fde215efeadfe1aaa8d
Comment 15 Martin Klapetek 2015-05-15 08:08:42 UTC
*** Bug 347744 has been marked as a duplicate of this bug. ***
Comment 16 Anca Luca 2015-06-11 14:31:24 UTC
Hello guys, any idea how I can get this fix in kubuntu 15.04? What package to upgrade, etc?
With me changing network a lot, it becomes very annoying, I have a popup in the right corner of my screen almost instantly after I start the session, and unless I logout I cannot get it to dissapear.

Or maybe a command that I could run to make it go away?
I have tried kwin_x11 --replace, doesn't change anything

I went to synaptic to try to uninstall notify osd, but it says it will uninstall ubuntu-desktop. I definitely don't want that. Or do I?
Comment 17 Toby Corkindale 2015-06-12 01:40:40 UTC
I'm on Kubuntu Vivid with the kde 5.3 PPA, and with latest updates applied as of 12th June, 2015, I'm still seeing problems with "stuck" notifications.

The usual one I get is Konsole sending "Bell in session" ones, so it is a KDE-to-KDE issue.

I think the stuck notifications happen if the notification is generated while the screen is locked.
Is this the same bug as this, or should I open a new one?
Comment 18 Martin Klapetek 2015-06-12 08:24:18 UTC
You must have libkf5notifications5 package version 5.10 or newer. If you have, it might be another issue (although unlikely). If you don't, then please update.
Comment 19 Martin Klapetek 2015-07-27 10:05:52 UTC
*** Bug 350649 has been marked as a duplicate of this bug. ***