Don't trigger notification updates when setting the same properties

BUG: 345973